footer: more spacing fixes

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -148,15 +148,15 @@ html, body {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin-top: 1rem;
+  margin-top: 0.75rem;
 }
 
 #footer ul a {
-  padding: 0.5rem 1rem;
+  padding: 0.25rem 0.75rem;
 }
 
 #footer h5 {
-  padding-left: 1rem;
+  padding-left: 0.75rem;
   font-size: 1rem;
   color: var(--color-fg);
 }
@@ -195,9 +195,9 @@ html, body {
 
 @media screen and (max-width: 700px) {
   .footer__chunk {
-    flex-basis: 40%;
-    max-width: 40%;
-    margin-bottom: 2rem;
+    flex-basis: 45%;
+    max-width: 50%;
+    margin-bottom: 3rem;
   }
 
   .footer__chunk:nth-child(1) { order: 3 }
